build: headless mode on

--- a/src/main/resources/playwright-config.yml
+++ b/src/main/resources/playwright-config.yml
@@ -1,7 +1,7 @@
 browserConfig:
   type: chromium          # Browser engine: chromium, firefox, webkit
   channel: chrome       # Browser channel: chrome/msedge
-  headless: false          # Run in headless mode (true/false)
+  headless: true          # Run in headless mode (true/false)
   slowMo: 0               # Delay actions (ms) – useful for debugging
 
 contextConfig:
