--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,6 +22,9 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
+      - name: Install Playwright dependencies
+        run: npx playwright install-deps
+
       - name: Run tests
         run: mvn -B clean verify
         env:
